syntax = "proto3";

package manager;

import "general.proto";

message AddMovieRequest {
    string name = 1;
    int32 age_restriction = 2;
    string writer = 3;    
    repeated UpsertSessionDto sessions = 4;
}

message UpsertSessionDto {
    string roomNumber = 1;
    repeated SessionDatesDto dates = 2;
}

message SessionDatesDto {
    string date = 2;
    repeated general.TimeSlot timeSlots = 3;
}

message UpdateMovieRequest {
    string id = 1;
    optional string name = 2;
    optional int32 age_restriction = 3;
    optional string writer = 4;
    repeated UpsertSessionDto sessions = 5;
}

