syntax = "proto3";

package micro.v1.portfolio;

import "general.proto";
import "movie_messages.proto";
import "session_messages.proto";
import "ticket_messages.proto";
import "user_messages.proto";

service PCustomerService {
  rpc BuyTickets(ByIdRequest) returns(stream BuyTicketsResponse) {}
  rpc WatchMovies(ByIdRequest) returns(stream WatchMoviesResponse) {}
  rpc ViewWatchHistory(PaginateRequest) returns(stream ViewWatchHistoryResponse) {}
}

service PUserService {
    rpc ListMovies(PaginateRequest) returns(stream ListMoviesResponse) {}
}

service PManagerService {
   
  }